Edit models and list.html files for using reverse url

--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -4,6 +4,7 @@
 <html lang="en">
 <head>
     <title>{% block title %} {% endblock title %}</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <div id="content"> 
