--- a/templates/blog/post/list.html
+++ b/templates/blog/post/list.html
@@ -8,7 +8,7 @@
 {% for post in post1 %}
 
 <h2>
-    <a href="{% url 'blog:post_detail' post.id %}">
+    <a href="{{post.get_absolute_url}}">
         {{post.title}}
     </a>
 </h2>
